--- a/BlogAPI/appsettings.json
+++ b/BlogAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-
+    "Postgre": "Server=babar.db.elephantsql.com;Database=qjorordu;User Id=qjorordu;Password=0sUxot33uG7psTFxKgeWHGO60CqoENfA;Port=5432"
   },
   "ApiUrl": "http://localhost:5188",
   "AllowedHosts": "*"
